--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "yuki-mailing",
+  "name": "node-mailer",
   "version": "1.0.0",
-  "description": "",
+  "description": "nodejs + mailgun",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "salva.io",
+  "license": "MIT",
+  "dependencies": {
+    "mailcomposer": "^3.9.0",
+    "mailgun-js": "^0.7.11"
+  }
 }
